<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e04b5a"
    tools:context=".ui.gallery.GalleryFragment">

    <Button
        android:id="@+id/button1"
        android:layout_width="143dp"
        android:layout_height="65dp"
        android:backgroundTint="#e49756"
        android:onClick="buttonPressed"
        android:text="@string/question1_1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.134" />

    <Button
        android:id="@+id/button3"
        android:layout_width="143dp"
        android:layout_height="65dp"
        android:backgroundTint="#e49756"
        android:onClick="buttonPressed"
        android:text="@string/question1_3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.31" />

    <Button
        android:id="@+id/button4"
        android:layout_width="143dp"
        android:layout_height="65dp"
        android:backgroundTint="#e49756"
        android:onClick="buttonPressed"
        android:text="@string/question1_4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.31" />

    <Button
        android:id="@+id/button2"
        android:layout_width="143dp"
        android:layout_height="65dp"
        android:backgroundTint="#e49756"
        android:onClick="buttonPressed"
        android:text="@string/question1_2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.134" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:text="Вопрос:"
        android:textColor="#5b305a"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="309dp"
        android:layout_height="49dp"
        android:layout_marginTop="51dp"
        android:text="Правильных Ответов: 0"
        android:textColor="#5b305a"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/question"
        android:layout_width="378dp"
        android:layout_height="154dp"
        android:text="@string/question1_0"
        android:textColor="#5b305a"
        android:textColorHighlight="#C8646D"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.079" />

</androidx.constraintlayout.widget.ConstraintLayout>